<resources>
    <string name="app_name">HS-Ulm New Student Info App</string>
    <string name="job_header">Earning money during your studies\n</string>
    <string name="job_intro">There are many ways of earning money while you study, for example as waiting staff, academic assistants or private tutors. A knowledge of German will improve your chances of finding a part-time job. But please be aware of the legal regulations.</string>
    <string name="searching_job">\nSearching for a job:</string>
    <string name="job_description">The regional offices of the Federal Employment Agency often have a job exchange for students. At larger higher education institutions you can find job vacancy listings at student services. Online job exchanges can be found on the websites
        of higher education institutions and student services. Sometimes a look at the notice board at your higher education institution or the classified ads in the local and regional papers is sufficient .</string>
    <string name="academic_assistants">\nAcademic assistants:</string>
    <string name="academic_description">Some students work as academic assistants at their university. They may for example supervise the library, lead tutorials or research literature for professors. Academic assistant jobs are a good addition to a degree programme. If you are interested in one
        of these jobs, you should ask about vacancies at the administrative office of your institute and keep an eye on the notice boards at your higher education institution.</string>
    <string name="outside_institution">\nOutside your higher education institution: </string>
    <string name="outside_institution_description">Typical off-campus student jobs include waiting tables, working at trade fairs, babysitting and courier services. Teacher training students often give tuition, students in publishing work for newspapers: the ideal job will be in some way associated with your degree programme.\n</string>
    <string name="important">Important:</string>
    <string name="important_info">It is virtually impossible for students to fund their entire cost of living through side jobs. There are not very many jobs of this type for students on the German labour market – and working too much can needlessly extend your degree programme.
        Instead, we recommend that you make use of the recess period and ensure that you are financially secure through scholarships or with the help of your family.\n</string>
    <string name="tips">Tips:</string>
    <string name="tips_description">At Hochschule Ulm, there is a year event "Karriere Börse" normally during the last week of October. Students get the opportunity to meet and interact with their favorite companies. Job/internship searching students are strongly advised to visit the event, make direct job applications and ask questions directly.\n</string>
    <string name="job_links">Job Links:</string>
    <string name="link_notes">Some of the job links can be found below. You are strongly advised to also use some search engines e.g Google to make your search</string>
    <string name="link1">https://studierendenwerk-ulm.de/en/bafoeg-and-finances/part-time-work/</string>
    <string name="link2">https://de.indeed.com/</string>
    <string name="link3">https://www.arbeitsagentur.de/en/welcome</string>
    <string name="link4">https://www.jobmensa.de/</string>
    <string name="how_much_work">\nHow much are you allowed to work?</string>
    <string name="rules">As of August 2012 international students who do not come from the EU or EEA are allowed to work 120 full or 240 half days in a year. To do this they do not need authorisation from the Employment Agency, i.e. the German authorities.
        \n\nInternational students who do not come from the EU cannot go self employed or work freelance!
        \n\nIf you want to work more than 120 full or 240 half days you need the approval of the Employment Agency and the Aliens Department. Whether you receive the approval depends on the situation of the job market in your place of study. In regions with high unemployment you will have little chance of working more than 120 days.
        \n\nOne exception, however, is the occupation of academic or student assistant. As long as your studies are not impaired by it, this work can be carried out for an unlimited period of time. The Aliens Department must still be informed if you wish to work as an academic or student assistant! </string>
    <string name="eu">\nStudents from the EU and the EEA\n</string>
    <string name="eu_description">Basically students from the European Union and the EEA stand practically on equal terms with German students and have free access to the German job market. You are regarded as a regular student and not as an employee if your job during term time contains no more than 20 hours a week.
        Since Mai 2011 students from Estonia, Latvia, Lithuania, Poland, Slovakia, Slovenia, Czech Republic and Hungary can work in terms similar to the German students. </string>
    <string name="semPlanHeader"> Semester Plan</string>
    <string name="semPlanIntro1"> At the beginning of the semester, new coming students have an opportunity to download thier semester plan of their program. Semester plan provides information about the courses which are placed for actual semeset. Link to download actual semester plan: \n
    https://www.hs-ulm.de/Dienste/Stundenplan/Studienanfänger/  \n
    </string>
    <string name="semPlanIntro2"> Moreover, there is also possible to download induvidual semeter plan for the higher course students according to the subjects of their preference.Link to download indivudial actual semester plan: \n
    https://lsf.verwaltung.hs-ulm.de/   \n
    </string>
    <string name="semPlanIntro3"> All courses offered in this actual semester. Link to the list of couses offered : \n
    https://lsf.verwaltung.hs-ulm.de/   \n
    After getting logged into system, there is section: Mein Studiengangplan. You need to just click onto it.
    </string>
    <string name="semPlanIntro4"> Detailed information about all the courses chosen by student for that semester.  \n
    https://lsf.verwaltung.hs-ulm.de/   \n
    After getting logged into system, there is section: Meine Veranstaltungen. You need to just click onto it.
    </string>
    <string name="semPlanIntro5"> All the important dates during the academic year at Hochschule Ulm including national holidays, semester break as well as exam periods.
        Link provides all the important dates for the actual semester:  \n
    https://studium.hs-ulm.de/en/Pages/Termine.aspx  \n

    </string>
        <string name="faq"> Frequently asked questions:   </string>
        <string name="Q1" > 1. How to find the course in Germany?</string>
        <string name="A1" > Find the suitable course of study! In the database there are more than 17500 courses for Bachelor, Master and State Examination. \n
    https://www.daad.de/deutschland/studienangebote/international-programmes/en/detail/4669/ </string>
        <string name="Q2" > 2. How do I apply for CTS course?</string>
        <string name="A2" > We are delighted you are interested in the degree programme Computer Science (CTS). We hope the following link will help you successfully secure a place at our University of Applied Sciences. \n
   https://studium.hs-ulm.de/de/Seiten/Studiengang_CTS_Bewerbung.aspx/ </string>
        <string name="Q3" > 3. Different application forms for all the informatics faculty?</string>
        <string name="A3" > In the following link given below you will get all application form. \n
    http://www.hs-ulm.de/informatik-downloads/ </string>
        <string name="Q4" > 4. What steps do I have to take after admission?</string>
        <string name="A4" > The German embassy in your country will inform you about the details of visa application as they apply to your country. If you need a visa, please apply immediately after receiving the admission letter. Be aware that the visa procedure will take several weeks/. \n
    https://studium.hs-ulm.de/de/Seiten/Studiengang_CTS_Bewerbung.aspx/ </string>
        <string name="Q5" > 5. How do I apply for CTS course?</string>
        <string name="A5" > We are delighted you are interested in the degree programme Computer Science (CTS). We hope the following link will help you successfully secure a place at our University of Applied Sciences. \n
    https://studium.hs-ulm.de/de/Seiten/Studiengang_CTS_Bewerbung.aspx/ </string>
        <string name="Q6" > 6. How to get to Ulm?</string>
        <string name="A6" >The railway station (Hauptbahnhof) is in the town center, about a 10 minute walk from the church (Ulmer Münster). Ulm is about an hour from Stuttgart and 1.5-2 hours from Munich.more information if you need you will get the link below. \n
    https://www.uni-ulm.de/en/io/degree-phd/welcome/getting-around/to-ulm </string>
        <string name="Q8" > 8. How to get Semesterplan?</string>
        <string name="A8" > In the following link given below you will get the Semesterplan. \n
    https://lsf.verwaltung.hs-ulm.de/ </string>
        <string name="Q9" > 9. How to find Mensa plan?</string>
        <string name="A9" > In the following link given below you will get the mensa plan. \n
     https://studium.hs-ulm.de/de/Seiten/Mensa.aspx/ </string>
        <string name="Q10" > 10.How to find Room Plan?</string>
        <string name="A10" > In the following link given below you will get room plan. \n
    https: //lsf.verwaltung.hs-ulm.de/ </string>
        <string name="Q11" > 11.  Here you can enroll, un-enroll from subjects and examinations, check your grades, search for other modules, and more.?</string>
        <string name="A11" > Normally from first to third semester you will be automatically register for the exam. from third semester you have to register one week before the lecture started.if you don\t want to continue any course or don\t want to take any exam you have to deregister one month before the exam. In the following link given below you will get more information. \n
     https://lsf.verwaltung.hs-ulm.de/qisserver/rds?state=usertype=0/ </string>
        <string name="Q12" > 12. How to find Mensa plan?</string>
        <string name="A12" > In the following link given below you will get the mensa plan. \n
     https://studium.hs-ulm.de/de/Seiten/Mensa.aspx/ </string>
        <string name="Q13" > 13. Where do I get Examination plans?</string>
        <string name="A13" > Normally One month before exam plan in uploaded in the following link that given below . \n
    http://www.hs-ulm.de/Fakultaet/Informatik/Prüfungen/ </string>
        <string name="Q14" > 14. Where I can get the Academic Calendar?</string>
        <string name="A14" > In the following link given below you will get the Academic Calendar. \n
    https://studium.hs-ulm.de/de/Seiten/Termine.aspx/ </string>
        <string name="Q15" > 15.  Access to the university email from browser?</string>
        <string name="A15" > Every student assigned one email ID by HS Ulm. Normally all information regarding University you will get from this email.In the following link given below you will get the domain ID for email. \n
    https: //webmail.hs-ulm.de/ </string>
        <string name="Q16" > 16.Students’ union?</string>
        <string name="A16" > In the following link given below you will get the student Union update. \n
    https://studium.hs-ulm.de/de/Seiten/Verfasste_Studierendenschaft.aspx/ </string>
        <string name="Q17" > 17.DreamSpark Webstore for informatics faculty (Important Software)?</string>
        <string name="A17" > In the following link given below you will get important software that you need. \n
    https://e5.onthehub.com/WebStore/ProductsByMajorVersionList.aspx?cmi_cs=1cmi_mnuMain=d36a65f7-6fcf-e111-971c-f04da23e67f6ws=1e06aec9-836f-e011-971f-0030487d8897vsro=8/ </string>
</resources>