<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
        <!-- TODO: Update blank fragment layout -->
        <!-- TODO: Update blank fragment layout -->


        <TextView
            android:id="@+id/semPlanHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/semPlanHeader"
            android:textColor="@color/Blue"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/eventIntro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/semPlanIntro1"
            android:textColor="@color/colorPrimaryDark"
            android:autoLink="web"
            android:textSize="16sp" />



        <TextView
            android:id="@+id/eventIntro2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/semPlanIntro2"
            android:textColor="@color/colorPrimaryDark"
            android:autoLink="web"
            android:textSize="16sp" />



        <TextView
            android:id="@+id/eventIntro3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/semPlanIntro3"
            android:textColor="@color/colorPrimaryDark"
            android:autoLink="web"
            android:textSize="16sp" />



        <TextView
            android:id="@+id/eventIntro4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/semPlanIntro4"
            android:autoLink="web"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/eventIntro5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:autoLink="web"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/semPlanIntro5"
            android:textSize="16sp" />
    </TableLayout>
</ScrollView>